objects/vlocity_cmt__VlocityTrackingEvent__e.object
<CustomObject>
    <description>Platform Events queue to publish OmniAnalytics events. Events are written to this event queue when OmniAnalyticsEnabled and OmniAnalyticsTrackAsEvent are set to true in General Settings(Custom Settings).</description>
    <fields>
        <fullName>vlocity_cmt__ActionContainerName__c</fullName>
        <description>Name of the container component record.</description>
        <label>Action Container Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EventName__c</fullName>
        <description>Name of the event. e.g. OS Step Load, Card Load etc</description>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Timestamp__c</fullName>
        <description>Time the event had occurred.</description>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingCategory__c</fullName>
        <description>UI or Server.</description>
        <label>Tracking Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingGroupId__c</fullName>
        <description>Id of the Vlocity Tracking Group record under which this event is captured.</description>
        <label>Tracking Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingService__c</fullName>
        <description>Container Component type. e.g. Omniscript, Card.</description>
        <label>Tracking Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Tracking Event</label>
    <pluralLabel>Vlocity Tracking Events</pluralLabel>
</CustomObject>